# greenledger-carbon-agent

./: .gitignore  DEMO.md  README.md  RECOVERY.md  SUBMISSION.md  pyproject.toml  requirements.txt
dashboard/: app.py  charts.py
dashboard/static/: style.css
dashboard/templates/: base.html  index.html  report.html
scripts/: generate_demo_video.py  generate_fixtures.py
src/greenledger/: __init__.py  calculator.py  cli.py  emission_factors.py  models.py  ocr.py  parser.py  pipeline.py  recommend.py
src/greenledger/data/: emission_factors.json
tests/: test_calculator.py  test_parser.py  test_recommend.py
